<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_launch"
            android:icon="@drawable/ic_rocket_launch"
            android:title="@string/nav_launch" />
        <item
            android:id="@+id/nav_roadster"
            android:icon="@drawable/ic_convertible_roadster"
            android:title="@string/nav_roadster" />
        <item
            android:id="@+id/nav_vehicles"
            android:icon="@drawable/ic_rocket_ship"
            android:title="@string/nav_vehicles" />
        <item
            android:id="@+id/nav_cores"
            android:icon="@drawable/ic_cores"
            android:title="@string/nav_cores" />
    </group>

    <item android:title="@string/nav_title_additional">
        <menu>
            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history"
                android:title="@string/nav_history" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_gallery"
                android:title="@string/nav_gallery" />
        </menu>
    </item>

    <group
        android:id="@+id/group_2">
        <item
            android:id="@+id/nav_about_company"
            android:title="@string/nav_about_company" />
        <item
            android:id="@+id/nav_about_app"
            android:title="@string/nav_about_app" />

    </group>

</menu>
