<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lyt_adapter_rocket_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <View
            android:layout_width="30dp"
            android:layout_height="wrap_content" />

        <RelativeLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_adapter_core_serial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_core_serial"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

            <TextView
                android:id="@+id/txt_adapter_core_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_core_status"
                android:layout_below="@+id/txt_adapter_core_serial"

                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle" />

        </RelativeLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/txt_adapter_core_block_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_header_core_block"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/txt_adapter_core_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_core_block"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorPrimaryDark"
                android:layout_below="@+id/txt_adapter_core_block_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle" />

        </RelativeLayout>

        <View
            android:layout_width="15dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btn_adapter_core_expand"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_expand_more"
            android:contentDescription="@null" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyt_adapter_core_expand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/txt_adapter_core_mission_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_core_missions_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>

            <TextView
                android:id="@+id/txt_adapter_core_missions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/txt_adapter_core_details_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_core_details_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>

            <TextView
                android:id="@+id/txt_adapter_core_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/lorem_ipsum" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="15dp" />

    </LinearLayout>

</LinearLayout>